<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_scanner"
        android:icon="@drawable/ic_scanner"
        android:title="@string/menu_scanner" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chat" />

    <item
        android:id="@+id/nav_allergies"
        android:icon="@drawable/ic_allergies"
        android:title="@string/menu_allergies" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile" />

</menu>